address CRAN issues; fix #107; fix #110; fix #111

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -77,8 +77,7 @@ importFrom(stats,runif)
 importFrom(stats,sd)
 importFrom(tibble,as_tibble)
 importFrom(tibble,tibble)
-importFrom(tinytex,install_tinytex)
-importFrom(tinytex,is_tinytex)
+importFrom(tinytex,pdflatex)
 importFrom(utils,browseURL)
 importFrom(withr,with_options)
 importFrom(withr,with_output_sink)
