--- a/NAMESPACE
+++ b/NAMESPACE
@@ -69,6 +69,7 @@ importFrom(graphics,barplot)
 importFrom(graphics,boxplot)
 importFrom(graphics,hist)
 importFrom(graphics,par)
+importFrom(rmarkdown,pdf_document)
 importFrom(rmarkdown,render)
 importFrom(stats,na.omit)
 importFrom(stats,pnorm)
